<resources>
    <string name="app_name">Test Suitmedia</string>
    <string name="icon_photo">Icon Photo</string>
    <string name="input_name">Name</string>
    <string name="input_palindrome">Palindrome</string>
    <string name="btn_check">CHECK</string>
    <string name="btn_next">NEXT</string>
    <string name="select_user_name">Select User Name</string>
    <string name="choose_user">Choose a User</string>
    <string name="is_palindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="second_screen">Second Screen</string>
    <string name="back_button">Back Button</string>
    <string name="third_screen">Third Screen</string>
    <string name="username">Firstname Lastname</string>
    <string name="email_user">EMAIL@EMAIL.COM</string>
    <string name="welcome">Welcome</string>
</resources>